[package]
name = "utils-rs"
version = "0.1.0"
edition = "2021"
repository = "git@github.com:Ion-Mobility/utils-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canparse = {git = "https://github.com/Ion-Mobility/canparse", branch = "0xkelvin/parse_signals"}
socketcan = "2.0.0"
log = "0.4.20"
mmcli = { path = "mmcli" }
cantool = { path = "cantool" }
logging = { path = "logging" }
spiconn = { path = "spiconn" }
wifitools = { path = "wifitools" }
icommsg = { path = "icommsg" }
tokio = { version = "1.40.0", features = ["full"] }
