[package]
name = "cantool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canparse = {git = "https://github.com/Ion-Mobility/canparse", branch = "0xkelvin/parse_signals"}
socketcan = "2.0.0"
chrono = "0.4"
log = "0.4.20"