[package]
name = "cantool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canparse = {git = "https://github.com/Ion-Mobility/canparse", branch = "0xkelvin/parse_signals"}
socketcan = "2.0.0"
chrono = "0.4"
log = "0.4.20"
tokio-socketcan = "0.3.1"
tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.30"
